# vibee-lang

./: .ai-context  .aider.conf.yml  .clinerules  .codegen-guard  .cursorrules  .dockerignore  .editorconfig  .env.example  .envrc.example  .gitattributes  .gitignore  .gitleaks.toml  .gitleaksignore  .mcp.json  .ona-rules.md  .pre-commit-config.yaml  .vibee-extension-rule.md  .vibee-format-rules.md  .vibee-spec-rules.md  .vibee_circuit_breakers.json  .vibee_domain_stats.json  .windsurfrules  AGENTS.md  BENCHMARK.md  CHANGELOG.md  CLAUDE.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Dockerfile  INSTALL_MACOS.md  README.md  RELEASE_NOTES.md  RULES.md  SECURITY.md  TOXIC_VERDICT_A2A_V37.md  TOXIC_VERDICT_BROWSER_v1.md  TOXIC_VERDICT_KOSCHEI_v9.md  TOXIC_VERDICT_RALPH_V38.md  TOXIC_VERDICT_TRINITY999.md  TOXIC_VERDICT_V17.md  (+56 more)
.bashrc.d/: codegen-guard.sh
.claude/: settings.json
.devcontainer/: Dockerfile  devcontainer.json
.githooks/: pre-commit  pre-push
.github/: CODEOWNERS  FUNDING.yml  PULL_REQUEST_TEMPLATE.md  copilot-instructions.md  dependabot.yml
.quantum_cache/: igla_v8_benchmark.vibee.hash  igla_v8_benchmark.zig.hash  igla_v8_benchmark.zig.result  igla_v8_constitutional.vibee.hash  igla_v8_constitutional.zig.hash  igla_v8_constitutional.zig.result  igla_v8_core.vibee.hash  igla_v8_core.zig.hash  igla_v8_core.zig.result  igla_v8_deepseek_mla.vibee.hash  igla_v8_deepseek_mla.zig.hash  igla_v8_deepseek_mla.zig.result  igla_v8_dpo.vibee.hash  igla_v8_dpo.zig.hash  igla_v8_dpo.zig.result  igla_v8_gemma2.vibee.hash  igla_v8_gemma2.zig.hash  igla_v8_gemma2.zig.result  igla_v8_llama31.vibee.hash  igla_v8_llama31.zig.hash  igla_v8_llama31.zig.result  igla_v8_moe_v2.vibee.hash  igla_v8_moe_v2.zig.hash  igla_v8_moe_v2.zig.result  igla_v8_multimodal.vibee.hash  igla_v8_multimodal.zig.hash  igla_v8_multimodal.zig.result  igla_v8_omniscient_fusion.vibee.hash  igla_v8_omniscient_fusion.zig.hash  igla_v8_omniscient_fusion.zig.result  igla_v8_phi3.vibee.hash  igla_v8_phi3.zig.hash  igla_v8_phi3.zig.result  igla_v8_qwen2.vibee.hash  igla_v8_qwen2.zig.hash  igla_v8_qwen2.zig.result  igla_v8_rlhf.vibee.hash  igla_v8_rlhf.zig.hash  igla_v8_rlhf.zig.result  igla_v8_tool_use.vibee.hash  (+2 more)
999/: README.999  ROADMAP.md  TECH_TREE.json  architecture.999  bridge.999  codegen.999  compiler_v3.999  console.999  evolution.999  lto.999  makrosy.999  mlir.999  parallel.999  pas.999  pas_discoveries.999  pas_improvements.999  runtime.999  simd_lexer.999  slovar.999  ⲁⲅⲓ_ⲥⲉⲧⲓ.999  ⲇⲁⲱⲃⲟⲣⲇ_ⲡⲣⲟⲃⲉⲣⲕⲓ.999  ⲕⲉⲣⲛⲉⲗ.999  ⲖⲀⲨⲞⲨⲦ.999  Ⲙ_gatekeeper.999  Ⲙ_neurosymbolic.999  Ⲙ_standard.999  Ⲙ_verifier.999  Ⲙ_ⲣⲁⲓⲛⲃⲟⲱ_ⲃⲣⲓⲇⲅⲉ.999  ⲤⲦⲀⲚⲆⲀⲢⲦ.999  ⲥⲩⲛⲧⲁⲝⲓⲥ.999  ⲧⲓⲡⲩ.ⲓⲛⲕⲣⲉⲙⲉⲛⲧ.999
archive/: browser_control.js  browser_control_advanced.js  chromium_controller.js
assets/: logo-ascii.txt
benchmark/: benchmark_results.csv  compare_all.py  compare_node.js  compare_zig.zig  compile_times.csv  fib_python.py  fib_stats.csv  jit_benchmark  jit_benchmark.zig  run_benchmark.sh  run_stats.sh  simd_parser_benchmark.zig  simple_jit_benchmark  simple_jit_benchmark.zig  tri_parser_benchmark  tri_parser_benchmark.zig
benchmarks/: BENCHMARK_REPORT.md  ai_models_comparison.zig  compare_all.py  compare_python.py  continuous_bench.zig  factorial.vb  fib_iter.vb  primes_sieve.vb  run_all.sh  sum_loop.vb  ternary_ops.vb  vibee_vs_zig.zig
book/: 00_TABLE_OF_CONTENTS.md  STRUCTURE.md  ZHAR_PTITSA.md  book_04.md  book_09.md  book_12.md  book_15.md  content_database.md  evolution_report.md
compiler999/: BENCHMARK_REPORT.md  alphabet.vibee  benchmark_results.vibee  benchmarks.vibee  codegen.vibee  comparison.999  dictionary.vibee  gorynych.vibee  lexer.vibee  parser.vibee  spec.vibee  test_evolution.vibee
config/: autoposting.json
deploy/: AWS_F2_QUICK_TEST_RU.md  DEPLOY_INSTRUCTIONS_RU.md  Dockerfile  Dockerfile.vibee  Makefile  docker-compose.yaml  github-release.yaml  mining_deploy.sh
docs/: 3DGS_ENGINE_V83_BENCHMARK.md  3DGS_ENGINE_V85_BENCHMARK.md  3DGS_ENGINE_V86_BENCHMARK.md  ADVANCED_SCREEN_ENGINE_v13092.md  ADVANCED_SCREEN_TECH_TREE.md  AGENTIC_RAG_GUIDE.md  AGENT_BROWSER_V321.md  AGENT_BROWSER_V363.md  AGI_SYSTEMS.md  AI_BROWSER_COMPETITIVE_ANALYSIS.md  APPLE_DESIGN_TREE_V1151.md  BENCHMARK_BROWSER_V12919.md  BENCHMARK_COMPARISON.md  BENCHMARK_COMPARISON_V19.md  BENCHMARK_COMPARISON_V24.md  (+294 more)
implementations/python/: pyproject.toml
implementations/python/benchmarks/: bench_inference.py  bench_optimizers.py
implementations/python/vibee_ml/: __init__.py
implementations/python/vibee_ml/data/: __init__.py  dedup.py  filtering.py  packing.py
implementations/python/vibee_ml/evaluation/: __init__.py  benchmark.py  metrics.py
implementations/python/vibee_ml/inference/: __init__.py  engine.py  kv_cache.py  quantization.py  serving.py
implementations/python/vibee_ml/optimizers/: __init__.py  adam_mini.py  lion.py  schedule_free.py  sophia.py
implementations/python/vibee_ml/safety/: __init__.py  evaluator.py  filters.py  guardrails.py
implementations/python/vibee_ml/training/: __init__.py  accelerator.py  checkpointing.py  distributed.py  flash_attention.py  mixed_precision.py
trinity/output/fpga/driver/python/: BENCHMARK.md  README.md  pyproject.toml  pytest.ini  requirements-test.txt  setup.py
trinity/output/fpga/driver/python/bitnet/: __init__.py  core.py  numpy_api.py  torch_api.py
trinity/output/fpga/driver/python/bitnet/benchmark/: __init__.py  __main__.py  cli.py  comparison.py  latency.py  memory.py  report.py  runner.py  throughput.py  visualization.py
trinity/output/fpga/driver/python/examples/: basic_inference.py  pytorch_integration.py
trinity/output/fpga/driver/python/tests/: __init__.py  mock_bitnet.py  test_cli.py  test_comparison.py  test_core.py  test_latency.py  test_memory.py  test_report.py  test_throughput.py  test_visualization.py
trinity/tauri/src-tauri/: Cargo.toml  build.rs  tauri.conf.json
trinity/tauri/src-tauri/src/: main.rs
vibee-browser/src-tauri/: Cargo.toml  core  tauri.conf.json
vibee-browser/src-tauri/capabilities/: default.json
vibee-browser/src-tauri/src/: main.rs
(+90142 files in other folders)
