[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "vibee-ml"
version = "2.6.0"
description = "VIBEE ML - Production-ready LLM training and inference optimizations"
readme = "README.md"
license = {text = "MIT"}
authors = [
    {name = "VIBEE Contributors", email = "vibee@example.com"}
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
]
keywords = ["llm", "training", "inference", "optimization", "machine-learning"]
requires-python = ">=3.10"
dependencies = [
    "torch>=2.0.0",
    "numpy>=1.24.0",
    "tqdm>=4.65.0",
    "pydantic>=2.0.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "pytest-benchmark>=4.0.0",
    "black>=23.0.0",
    "ruff>=0.1.0",
    "mypy>=1.0.0",
]
inference = [
    "vllm>=0.3.0",
    "transformers>=4.36.0",
    "accelerate>=0.25.0",
]
training = [
    "deepspeed>=0.12.0",
    "flash-attn>=2.4.0",
    "bitsandbytes>=0.41.0",
]
all = [
    "vibee-ml[dev,inference,training]",
]

[project.scripts]
vibee-ml = "vibee_ml.cli:main"
vibee-bench = "vibee_ml.benchmarks:main"
vibee-serve = "vibee_ml.deployment:serve_cli"

[project.urls]
Homepage = "https://github.com/vibee-lang/vibee-ml"
Documentation = "https://vibee-lang.github.io/vibee-ml"
Repository = "https://github.com/vibee-lang/vibee-ml"

[tool.setuptools.packages.find]
where = ["."]
include = ["vibee_ml*"]

[tool.black]
line-length = 100
target-version = ["py310", "py311", "py312"]

[tool.ruff]
line-length = 100
select = ["E", "F", "W", "I", "N", "UP", "B", "C4"]

[tool.mypy]
python_version = "3.10"
warn_return_any = true
warn_unused_configs = true

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
addopts = "-v --tb=short"
