[package]
name = "vibee-browser"
version = "2482.0.0"
description = "VIBEE AI Browser - Ternary Logic Interface"
authors = ["VIBEE Team"]
license = "MIT"
repository = "https://github.com/gHashTag/vibee-lang"
edition = "2021"

[build-dependencies]
tauri-build = { version = "1.5", features = [] }

[dependencies]
tauri = { version = "1.6", features = ["shell-open", "window-all", "dialog-all", "fs-all", "path-all", "clipboard-all"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

[features]
default = ["custom-protocol"]
custom-protocol = ["tauri/custom-protocol"]
