[package]
name = "vibee-browser"
version = "2482.0.0"
description = "VIBEE AI Browser - Ternary Logic Interface"
authors = ["VIBEE Team"]
license = "MIT"
repository = "https://github.com/gHashTag/vibee-lang"
edition = "2021"

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-shell = "2"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

[features]
default = ["custom-protocol"]
custom-protocol = ["tauri/custom-protocol"]
