[package]
name = "trinity"
version = "24.0.0"
description = "TRINITY - φ-Optimized Data Structures"
authors = ["TRINITY Team"]
license = "MIT"
repository = "https://github.com/trinity/trinity"
edition = "2021"

# φ-optimized build configuration
# Target binary size: 1.618 MB (φ megabytes)

[build-dependencies]
tauri-build = { version = "1.5", features = [] }

[dependencies]
tauri = { version = "1.5", features = [
    "shell-open",
    "fs-all",
    "dialog-all",
    "clipboard-all",
    "notification-all",
    "global-shortcut-all",
    "window-all",
    "updater"
] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# φ-compute dependencies
num-traits = "0.2"
lazy_static = "1.4"

[features]
default = ["custom-protocol"]
custom-protocol = ["tauri/custom-protocol"]

[profile.release]
# φ-optimized release profile
panic = "abort"
codegen-units = 1
lto = true
opt-level = "z"
strip = true
